<resources>
    <string name="app_name">Currency Exchange</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">loading</string>
    <string name="this_is_country_image">This is country image</string>
    <string name="sample_rate">6.5280</string>
    <string name="country_code">SEK</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="select_base_currency">Select Base Currency</string>
    <string name="search_currency">Search currency</string>
    <string name="please_add_select_currency">Please Add Currency</string>
    <string name="hello">Loading</string>
</resources>